--- a/IKZ_plugin/pyproject.toml
+++ b/IKZ_plugin/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     'nomad-analysis',
     'statsmodels',
     'lakeshore_plugin@git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@main#subdirectory=Lakeshore_plugin',
-    'laytec_epitt@git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@main#subdirectory=LayTec_EpiTT_plugin',
+    'laytec_epitt_plugin@git+https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas.git@main#subdirectory=LayTec_EpiTT_plugin',
 ]
 
 [project.optional-dependencies]
