--- a/IKZ_plugin/pyproject.toml
+++ b/IKZ_plugin/pyproject.toml
@@ -16,8 +16,8 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
 ]
-name = "ikz_plugin"
-version = "0.0.1"
+name = "ikz-plugin"
+version = "0.1.0"
 description = "A plugin for NOMAD containing IKZ use cases."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -29,7 +29,7 @@ authors = [
 ]
 license = { file = "LICENSE" }
 dependencies = [
-    'nomad-lab>=1.2.1',
+    'nomad-lab>=1.3.1',
     'nomad-material-processing',
     'nomad-measurements',
     'nomad-analysis',
