refurbished sources classes in IKZ movpe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,4 +32,7 @@
     "[python]": {
         "editor.defaultFormatter": "charliermarsh.ruff"
     },
+    "[yaml]": {
+        "editor.defaultFormatter": "redhat.vscode-yaml"
+    },
 }
