--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -6,9 +6,10 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "uv_vis_nir_transmission"
+name = "transmission"
 dynamic = ["version"]
-description = "A plugin for NOMAD containing base sections for uv-vis transmission."
+description = """
+A plugin for NOMAD containing base sections for transmission spectrophotometry."""
 readme = "README.md"
 requires-python = ">=3.9"
 classifiers = [
@@ -22,44 +23,70 @@ dependencies = [
 ]
 [project.optional-dependencies]
 dev = [
-    "ruff>=0.2.0",
+    "ruff",
     "pytest",
-    "structlog==22.3.0",
+    "structlog",
 ]
 
 [project.license]
 file = "LICENSE"
 
+[tool.uv]
+index-url = "https://gitlab.mpcdf.mpg.de/api/v4/projects/2187/packages/pypi/simple"
+
 [tool.ruff]
-include = ["src/uv_vis_nir_transmission/*.py", "tests/*.py"]
-lint.select = [
-    "E", # pycodestyle
-    "W", # pycodestyle
-    "PL", # pylint
+include = ["src/*.py", "tests/*.py"]
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
 ]
-lint.ignore = [
-    "E501", # Line too long ({width} > {limit} characters)
-    "E701", # Multiple statements on one line (colon)
-    "E731", # Do not assign a lambda expression, use a def
-    "E402",  # Module level import not at top of file
-    "PLR0911", # Too many return statements
-    "PLR0912", # Too many branches
-    "PLR0913", # Too many arguments in function definition
-    "PLR0915", # Too many statements
-    "PLR2004", # Magic value used instead of constant
-    "PLW0603", # Using the global statement
-    "PLW2901", # redefined-loop-name
-    "PLR1714", # consider-using-in
-    "PLR5501", # else-if-used
-]
-lint.fixable = ["ALL"]
 
 # Same as Black.
 line-length = 88
 indent-width = 4
 
-# Assume Python 3.9
-target-version = "py39"
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # isort
+    "I",
+    # pylint
+    "PL",
+]
+
+ignore = [
+    "F403", # 'from module import *' used; unable to detect undefined names
+]
+
+fixable = ["ALL"]
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # this is entirely optional, you can remove this if you wish to
 [tool.ruff.format]
@@ -75,8 +102,12 @@ skip-magic-trailing-comma = false
 # Like Black, automatically detect the appropriate line ending.
 line-ending = "auto"
 
+[tool.setuptools]
+package-dir = { "" = "src" }
+
 [tool.setuptools.packages.find]
 where = ["src"]
 
-[tool.setuptools.package-data]
-nomad_analysis = ['*/nomad_plugin.yaml']
+[project.entry-points.'nomad.plugin']
+transmission_schema = "transmission:schema"
+transmission_parser = "transmission:parser"
