--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 ]
 dependencies = [
     "nomad-lab>=1.2.2dev578",
+    "nomad-material-processing"
 ]
 [project.optional-dependencies]
 dev = [
