Add material system entry point; rename dopant as impurity

--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -112,3 +112,4 @@ where = ["src"]
 [project.entry-points.'nomad.plugin']
 transmission_schema = "transmission:schema"
 transmission_parser = "transmission:parser"
+transmission_material_systems = "transmission:material_systems_schema"
