--- a/IKZ_plugin/pyproject.toml
+++ b/IKZ_plugin/pyproject.toml
@@ -32,8 +32,8 @@ dependencies = [
     'nomad-lab>=1.3.1',
     'nomad-material-processing',
     'nomad-measurements',
-    'nomad-analysis',
-    'lakeshore-nomad-plugin@git+https://github.com/IKZ-Berlin/lakeshore-nomad-plugin.git@35406777dbac424f674ad6c61b2c9bf206535859',
+    # 'nomad-analysis',
+    # 'lakeshore-nomad-plugin@git+https://github.com/IKZ-Berlin/lakeshore-nomad-plugin.git@35406777dbac424f674ad6c61b2c9bf206535859',
     'laytec_epitt_plugin@git+https://github.com/IKZ-Berlin/laytec_epitt_nomad_plugin.git@f4953ac4ecb55b7003dee323d7d7f473e49ab4e3',
 ]
 
@@ -132,5 +132,6 @@ dir_sol_schema = "ikz_plugin.directional_solidification:schema"
 dir_sol_manual_protocol_excel_parser = "ikz_plugin.directional_solidification:excel_parser"
 czochralski_schema = "ikz_plugin.czochralski:schema"
 czochralski_multilog_parser = "ikz_plugin.czochralski:parser"
+movpe_app = "ikz_plugin.movpe.movpe_app:movpesubstrateapp"
 
 
