Transmission modify sample (#167)
* Order quantities; revert modification of basesection quantities

* Modify description of quantities

* Populate elements and components based on chemical_composition

* Add overwrite_quantity in merge_sections

* Include merge section capability to allow GUI interaction in `components`

* Restrict component class to `PureSubstanceComponent`

* Move material system as sub-section in TransmissionSample

* Add module for material_system and classes for Solid Solution

* Create TransmissionSampleReference class and use it in samples subsection

* Make SolidSolution as an entry class; reference it in TransmissionSample

* Bugfix: logic of adjusting composition

* Rearrange imports

* Add physical properties classes

* Refactor Transmission sample to be a section containing reference and physical props; refactor normalize

* Fixing rebase

* Changing warn to warning

* Move Physical properties to schema

* Rename section names; add docstring for naming convention

* Add crystal, polycrystal, mixed crystal, mixed polycrystal sections

* Ruff

* Add material system entry point; rename dopant as impurity

* Refine the ELN properties of sample related schemas

* Refine ELN properties for material system; make atomic percentage in to atomic fraction

* Remove materials_system: they will be moved to nomad-material-processing

* Align TransmissionSampleReference with CompositeSystemReference

* Compose a Sample class based on composite system

* Refactor extinction coefficient calc and plot

* Temporary bugfix for extinction coeff calc; minor changes in schema

* Update nomad

* Bugfix schema import; ignore search when in client context

* Add caplog conftest

* Bugfix: updating schema in search_quantities

* Add aliases

* Add previous archives to test for backward compatibility

* Add test for backward compatibility

* Add fixes for backward compatibility

* Move RawFile

--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -19,13 +19,15 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "nomad-lab>=1.2.2dev578",
+    "nomad-lab>=1.3.4dev",
+    "nomad-material-processing"
 ]
 [project.optional-dependencies]
 dev = [
     "ruff",
     "pytest",
     "structlog",
+    "nomad-lab[infrastructure]>=1.3.4dev",
 ]
 
 [project.license]
