--- a/rtg-sims/pyproject.toml
+++ b/rtg-sims/pyproject.toml
@@ -1,31 +1,122 @@
 [build-system]
-requires = [ "setuptools>=61.0.0",]
+requires = [
+    "setuptools>=61.0.0",
+    "setuptools-scm>=8.0",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "RTG_SIMS"
-version = "0.0.1"
-description = "A NOMAD plugin for RTG SIMS data"
+classifiers = [
+    "Intended Audience :: Developers",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
+]
+name = "rtg-sims"
+version = "0.1.0"
+description = "A plugin for RTG SIMS."
 readme = "README.md"
 requires-python = ">=3.9"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.9",
+authors = [
+    { name = "Andrea Albino", email = 'andrea.albino@physik.hu-berlin.de' },
+    { name = "Sebastian Brückner", email = 'sebastian.brueckner@ikz-berlin.de' },
+    { name = "Sarthak Kapoor", email = 'sarthak.kapoor@ikz-berlin.de' },
+    { name = "Hampus Näsström", email = 'hampus.naesstroem@physik.hu-berlin.de' },
 ]
+license = { file = "LICENSE" }
 dependencies = [
-    "nomad-lab>=1.2.1.dev",
-    "nomad-material-processing>=0.0.1",
-    "nomad-measurements>=0.0.1",
-]
-[project.optional-dependencies]
-dev = [
-    "pytest",
-    "structlog==22.3.0",
+    'nomad-lab>=1.3.1',
+    'nomad-material-processing',
+    'nomad-measurements',
 ]
 
-[project.license]
-file = "LICENSE"
+[project.optional-dependencies]
+dev = ["ruff", "pytest", "structlog"]
+
+[project.urls]
+"Homepage" = "https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas/tree/main/RTG_SIMS"
+"Bug Tracker" = "https://github.com/FAIRmat-NFDI/AreaA-data_modeling_and_schemas/issues"
+
+[tool.ruff]
+# Exclude a variety of commonly ignored directories.
+exclude = [ 
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "venv",
+]
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # isort
+    "I",
+    # pylint
+    "PL",
+]
+
+ignore = [
+    "F403", # 'from module import *' used; unable to detect undefined names
+]
+
+fixable = ["ALL"]
+
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# this is entirely optional, you can remove this if you wish to
+[tool.ruff.format]
+# use single quotes for strings.
+quote-style = "single"
+
+# indent with spaces, rather than tabs.
+indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+line-ending = "auto"
 
 [tool.setuptools]
-packages = ["nomadschemartgsims"]
+package-dir = { "" = "src" }
+
+
+[tool.setuptools.packages.find]
+where = ["src"]
+
+[project.entry-points.'nomad.plugin']
+
+schema = "rtg_sims:schema"
+parser = "rtg_sims:parser"
