--- a/rtg-sims/pyproject.toml
+++ b/rtg-sims/pyproject.toml
@@ -88,6 +88,9 @@ select = [
 
 ignore = [
     "F403", # 'from module import *' used; unable to detect undefined names
+    "PLR0912", # Too many branches
+    "PLR0913", # Too many arguments in function definition
+    "PLR0915", # Too many statements
 ]
 
 fixable = ["ALL"]
