--- a/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
+++ b/transmission/transmission_plugin/uv_vis_nir_transmission_plugin/pyproject.toml
@@ -19,8 +19,8 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "nomad-lab>=1.3.4dev",
-    "nomad-material-processing"
+    "nomad-material-processing",
+    "fairmat-readers-transmission",
 ]
 [project.optional-dependencies]
 dev = [
